@@ -1,3 +1,7 @@
+2004-03-28  Douglas Bates  <bates@bates2_home>
+
+	* src/ssclme.c (ssclme_fitted): Added function.
+
 2004-03-27  Douglas Bates  <bates@bates2_home>
 
 	* src/ssclme.c (ssclme_transfer_dimnames): Add new function to
